header section completed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
     <title>App Toboolist</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
+    <!-- header starts  -->
+    <header>
+        <div class="hd-ctn">    <!-- hd-ctn = header-container-->>
+            <img src="assets/images/Logo.png" alt="toboolist Logo" class="logo">
+            <h1>Toboolist</h1>
+        </div>
+    </header>
+    <!-- /header ends  -->
+    <!-- main starts  -->
+    <main>
+
+    </main>
+    <!-- /main ends  -->
   </body>
 </html>
