button section completed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <!-- header starts  -->
     <header>
-        <div class="hd-ctn">    <!-- hd-ctn = header-container-->>
+        <div class="hd-ctn">    <!-- hd-ctn = header-container-->
             <img src="assets/images/Logo.png" alt="toboolist Logo" class="logo">
             <h1>Toboolist</h1>
         </div>
@@ -21,6 +21,10 @@
     <!-- /header ends  -->
     <!-- main starts  -->
     <main>
+        <div class="btn-ctn">     <!-- btn-ctn = button-container-->
+            <button class="btn cta-left">Add Task</button>   <!-- cta = call to action-->
+            <button class="btn cta-right">Add section</button>
+        </div>
 
     </main>
     <!-- /main ends  -->
