new task section done

--- a/index.html
+++ b/index.html
@@ -21,10 +21,23 @@
     <!-- /header ends  -->
     <!-- main starts  -->
     <main>
+        <!-- button section  -->
         <div class="btn-ctn">     <!-- btn-ctn = button-container-->
             <button class="btn cta-left">Add Task</button>   <!-- cta = call to action-->
             <button class="btn cta-right">Add section</button>
         </div>
+        <!-- /button section ends -->
+        <!-- New task section  -->
+        <section class="first-section">
+            <h2><span class="arrow-down">&#9660;</span> New Task</h2>
+            <ul>
+                <li>Quarterly Newsletter</li>
+            </ul>
+            <div class="colored-tag blue-tag">Editorial</div>
+        </section>
+        <!-- /New task section ends  -->
+
+
 
     </main>
     <!-- /main ends  -->
