main completed and project done

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>App Toboolist</title>
   </head>
   <body>
@@ -31,14 +31,58 @@
         <section class="first-section">
             <h2><span class="arrow-down">&#9660;</span> New Task</h2>
             <ul>
-                <li>Quarterly Newsletter</li>
+                <li>
+                    Quarterly Newsletter
+                    <div class="colored-tag blue-tag">Editorial</div>
+                </li>
             </ul>
-            <div class="colored-tag blue-tag">Editorial</div>
         </section>
         <!-- /New task section ends  -->
-
-
-
+        <!-- today section  -->
+        <section class="second-section">
+            <h2><span class="arrow-down">&#9660;</span> Today</h2>
+            <ul>
+                <li>
+                    Recruiting Blog Post
+                    <div class="colored-tag blue-tag">Editorial</div>
+                </li>
+                <li>
+                    Mobile App launch
+                    <div class="colored-tag purple-tag">Q1 Goals</div>
+                </li>
+                <li class="cross">
+                    Interview John H.
+                    <div class="colored-tag lgreen-tag">Recruiting</div>
+                </li>
+                <li>
+                    Submit update to mobile storefronts
+                    <div class="colored-tag orange-tag">Mobile</div>
+                </li>
+            </ul>
+        </section>
+        <!-- /todaysection ends  -->
+        <!-- Upcoming section  -->
+        <section class="third-section">
+            <h2><span class="arrow-down">&#9660;</span> Today</h2>
+            <ul>
+                <li class="cross">
+                    Schedule meeting with Alex
+                </li>
+                <li>
+                    Homepage Refresh
+                    <div class="colored-tag magenta-tag">Website</div>
+                </li>
+                <li>
+                    Onboard new Sales team members
+                    <div class="colored-tag green-tag">Sales</div>
+                </li>
+                <li>
+                    Review wditorial calendar
+                    <div class="colored-tag blue-tag">Editorial</div>
+                </li>
+            </ul>
+        </section>
+        <!-- /Upcoming section ends  -->
     </main>
     <!-- /main ends  -->
   </body>
